nc-03 fix: missing bottom padding causing text to shift

--- a/public/style.css
+++ b/public/style.css
@@ -661,7 +661,7 @@ body {
   padding-left: 2rem;
   padding-right: 2rem;
   padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.75rem;
   --tw-text-opacity: 1;
   color: rgb(163 163 163 / var(--tw-text-opacity));
 }
