--- a/src/input.css
+++ b/src/input.css
@@ -17,7 +17,7 @@ body {
 }
 
 .tab {
-    @apply text-neutral-400 px-8 py-2 cursor-pointer;
+    @apply text-neutral-400 px-8 pt-2 pb-3 cursor-pointer;
 }
 
 .tab-content {
